feat: specific port forwarding

--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "default_zone": "us-central1-a",
     "listen_port": 8080,
     "instance_name": "sigma-server",
-    "idle_timeout_seconds": 300
+    "idle_timeout_seconds": 300,
+    "dest_port": 80
 }
   
